{
    "name": "BirdControls",
    "maps": [
        {
            "name": "Bird",
            "id": "87294ead-d9da-4217-bca5-fc5c0ef47ac6",
            "actions": [
                {
                    "name": "FlyUp",
                    "type": "Button",
                    "id": "174a9b57-77b5-4922-879f-740b1fa15b37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "PassThrough",
                    "id": "130d0a6d-bbb9-42dc-b32f-949e1612748c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "PassThrough",
                    "id": "22ac9395-6bb5-4176-9278-d1cd2107fd79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "660a1922-da38-4f15-aa18-83aca3337fdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b493a48e-2eac-40b3-9bb2-ce6b349bbb08",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5809610-5b4e-4b8e-b263-14b619090fd2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d9988b0-e069-4b0f-8700-1782d8421391",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5690d42-1159-49ee-9a0b-635ccd8d6bcf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "05046cec-c8fd-4d55-9ad8-b3fb1c09e788",
            "actions": [
                {
                    "name": "Level1",
                    "type": "Button",
                    "id": "6e449b42-ce00-4192-a8f3-74db02242c53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Level2",
                    "type": "Button",
                    "id": "a7769c91-a853-4d37-afc7-7fb85a96f813",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "68ae276b-3d5e-4b32-b14e-ce677c3b8b02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SoundUp",
                    "type": "Button",
                    "id": "71c52d87-3110-424b-b896-71614450839c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SoundDown",
                    "type": "Button",
                    "id": "f9db0d22-4713-463b-a47e-529206714983",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0f2e5fa-d6b7-4da6-a3b7-ee2da8c0972c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Level1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d174cc9f-b2b9-4e6b-a40c-b8f00c2c2534",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Level2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "373476d7-adbb-4820-a792-54816e6c7840",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df0b49fb-654a-4549-a0c2-df739c5aa2ac",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fbc33dc-dde0-496a-b1d3-10b6c546c9ba",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}